fix mobile nav alignment on mobile #1

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -110,6 +110,7 @@
 
 		input {
 			width: 100%;
+			max-width: none;
 		}
 
 		@include media($bp-md) {
